# game-recommender

./: .gitignore  README.md  compose.yaml  env  env:Zone.Identifier  package.json  pyproject.toml
data/: README.md  fake_games_dataset.json
src/api/: Dockerfile  README.md  alembic.ini  database.py  entrypoint.sh  generate_fake_games.py  igdb.py  main.py  manage.py  models.py  parse_datasets.py  pyproject.toml  requirements.txt  reset_database.py  seed_data.py
src/api/alembic/: env.py
src/api/alembic/versions/: aef0008118ec_base_revision.py
src/api/api/: .my_pgpass  .pg_service.conf  settings.py  urls.py
src/api/games/: admin.py  models.py  urls.py  views.py
src/api/games/migrations/: 0001_initial.py  0002_platform_android_platform_arcade_platform_blackberry_and_more.py  0003_game_review_score.py  0004_alter_game_description_alter_game_release_date_and_more.py  0005_alter_multiplayer_player_count.py  0006_alter_game_title.py  0007_igdbgame.py
src/api/helpers/: generate_fake_games.py
src/api/models/: game.py  multiplayer.py  platforms.py
src/api/services/: igdb.py
src/app/: .env.example  .eslintrc.cjs  .stylelintrc.json  .yarnrc.yml  Dockerfile  README.md  compose.yaml  index.html  jest.config.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
src/app/app/: globals.css  globals.scss  home.module.scss  layout.js  layout.jsx  page.js  page.jsx
src/app/app/components/: Games.jsx  Nav.jsx
src/app/app/components/avatar/: Avatar.jsx  avatar.scss
src/app/app/components/card/: Card.jsx  card.scss
src/app/app/components/cards/: Cards.jsx  cards.module.scss
src/app/app/components/footer/: footer.scss
src/app/app/components/nav/: Nav.jsx  nav.scss
src/app/app/styles/: _variables.scss
src/app/components/: Avatar.jsx  Footer.js  Footer.jsx  Games.jsx  Header.jsx  Nav.jsx
src/app/components/avatar/: Avatar.jsx
src/app/components/nav/: Nav.jsx  nav.scss
src/app/coverage/: clover.xml  coverage-final.json  lcov.info
src/app/coverage/lcov-report/: index.html
src/app/coverage/lcov-report/app/: index.html  vite.config.js.html
src/app/coverage/lcov-report/src/: App.jsx.html  index.html  main.jsx.html
src/app/cypress/e2e/: spec.cy.js
src/app/src/: App.jsx  app.scss  global.scss  home.module.scss  main.jsx
src/app/src/__test__/: Cards.test.jsx  cards.test.jsx
src/app/src/routes/: +layout.svelte  +page.svelte
src/app/src/styles/: _variables.scss
(+57 files in other folders)
